argocd/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhapido-landingpage
  labels:
    app.kubernetes.io/name: rhapido-landingpage
    app.kubernetes.io/part-of: rhapido
