argocd/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rhapido-landingpage
  labels:
    app: rhapido-landingpage
spec:
  selector:
    app: rhapido-landingpage
  ports:
    - port: 8080
      targetPort: 3000
      name: http
